--- a/OOOTablewar/PresentationLogic/PresentationLogic.csproj
+++ b/OOOTablewar/PresentationLogic/PresentationLogic.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataBaseLogic\DataBaseLogic.csproj" />
+  </ItemGroup>
+
 </Project>
