--- a/OOOTablewar/DataBaseLogic/DataBaseLogic.csproj
+++ b/OOOTablewar/DataBaseLogic/DataBaseLogic.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
   </ItemGroup>
 
 </Project>
